# Rust-PIC-GUI-Linux

./: .dockerignore  .gitattributes  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  waveform_example.csv
crates/rust-pic/: Cargo.toml
crates/rust-pic/src/: lxcat.rs  main.rs  surface.rs
crates/server/: Cargo.toml
crates/server/src/: diagnostics.rs  jobs.rs  main.rs  params.rs  routes.rs  state.rs
deploy/: rust-pic-web.service
docs/: bugfix-batch-2026-06-spec.md  linux-restructure-spec.md  particle-anim-spec.md  waveform-upload-fix-spec.md  web-migration-spec.md
scripts/: build.sh  dev.sh  run.sh
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  diagnostics.ts  params.ts  styles.css  types.ts
web/src/components/: Compare.tsx  ComparePlot.tsx  Field.tsx  JobsList.tsx  ParamForm.tsx  ParticleAnim.tsx  Plot.tsx  RunPanel.tsx  StatusBadge.tsx  Visualize.tsx  WaveformUpload.tsx
web/src/lib/: api.ts  diff.ts  plot.ts
xsec/: CF4 Cross section.txt  He Cross section.txt  O2 Cross section.txt
